[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[workspace]
members = [
    "libafl",
    "libafl_derive",
    "libafl_cc",
    "libafl_targets",
    "fuzzers/frida_libpng",
    "libafl_frida",
]
exclude = [
    "fuzzers/libfuzzer_libpng",
    "fuzzers/libfuzzer_stb_image",
    "fuzzers/libfuzzer_libmozjpeg",
    "fuzzers/qemu_user",
]
